--- a/views/userEdit.ejs
+++ b/views/userEdit.ejs
@@ -11,7 +11,7 @@
     </div>
     <div>
         <label>email：</label>
-        <input type="text" name="email" placeholder="email" value="<%=data[0].emai %>">
+        <input type="text" name="email" placeholder="email" value="<%=data[0].email %>">
     </div>
     <div>
         <input type='submit' value='Submit'>
